Adds apt-get update and removes eclipse memory configuration steps
Former-commit-id: 53639988ebb34ef9fe7a693496d19b61647cc772